--- a/Pertemuan 2/Tugas-Pertemuan-2.html
+++ b/Pertemuan 2/Tugas-Pertemuan-2.html
@@ -1625,21 +1625,22 @@ bren.test &lt;- ts(data.bren[(n_train+1):n],
 <p>Berdasarkan grafik di atas, dapat dilihat beberapa hal:</p>
 <ul>
 <li>
-Trend: Karakteristik paling dominan pada data adalah adanya tren naik
-yang jelas. Meskipun terdapat fluktuasi jangka pendek, arah pergerakan
-harga secara umum terus meningkat sepanjang periode observasi, terutama
-pada akhir periode data latih dan berlanjut ke data uji.
+Trend <br> Karakteristik paling dominan pada data adalah adanya tren
+naik yang jelas. Meskipun terdapat fluktuasi jangka pendek, arah
+pergerakan harga secara umum terus meningkat sepanjang periode
+observasi, terutama pada akhir periode data latih dan berlanjut ke data
+uji.
 <li>
-Cyclicality Data menunjukkan adanya fluktuasi naik-turun yang tidak
+Cyclicality <br> Data menunjukkan adanya fluktuasi naik-turun yang tidak
 terjadi dalam interval waktu yang tetap dan teratur. Pola ini lebih
 tepat diklasifikasikan sebagai pola cyclical, yang umum ditemukan pada
 data ekonomi dan keuangan, bukan pola musiman (seasonal) yang terikat
 pada periode kalender tertentu.
 <li>
-Volatility Data memperlihatkan tingkat volatilitas yang tinggi, di mana
-terjadi perubahan harga yang signifikan dalam waktu singkat. Hal ini
-merupakan ciri khas dari data pasar saham yang dipengaruhi oleh banyak
-faktor eksternal.
+Volatility <br> Data memperlihatkan tingkat volatilitas yang tinggi, di
+mana terjadi perubahan harga yang signifikan dalam waktu singkat. Hal
+ini merupakan ciri khas dari data pasar saham yang dipengaruhi oleh
+banyak faktor eksternal.
 </ul>
 <p>Kombinasi dari adanya tren yang kuat dan tidak adanya pola musiman
 yang jelas memberikan hipotesis awal untuk pemilihan model. Model
@@ -2113,37 +2114,37 @@ ggplot(data = metrik.test, aes(x = reorder(Model, MASE), y = MASE)) +
 <p>Beberapa alasan saya menggunakan MASE:</p>
 <ol>
 <li>
-Independen Terhadap Skala MASE tidak terpengaruh oleh skala asli data
-(apakah data dalam puluhan atau jutaan). Ini membuatnya adil saat
+Independen Terhadap Skala <br> MASE tidak terpengaruh oleh skala asli
+data (apakah data dalam puluhan atau jutaan). Ini membuatnya adil saat
 membandingkan data set yang berbeda.
 <li>
-Menghindari Masalah Pembagian dengan Nol MAPE akan gagal jika ada nilai
-aktual nol dalam data. MASE tidak memiliki masalah ini.
+Menghindari Masalah Pembagian dengan Nol <br> MAPE akan gagal jika ada
+nilai aktual nol dalam data. MASE tidak memiliki masalah ini.
 <li>
-Simetris MAPE cenderung memberikan “hukuman” lebih besar pada peramalan
-yang terlalu rendah daripada yang terlalu tinggi. MASE lebih simetris
-dan adil.
+Simetris <br> MAPE cenderung memberikan “hukuman” lebih besar pada
+peramalan yang terlalu rendah daripada yang terlalu tinggi. MASE lebih
+simetris dan adil.
 <li>
-Benchmark yang Jelas MASE memiliki interpretasi yang sangat kuat. Nilai
-MASE &lt; 1 berarti model Anda lebih baik daripada model naive (yang
-meramalkan nilai periode sebelumnya). Nilai MASE &gt; 1 berarti model
-Anda lebih buruk daripada model naif. Ini memberikan dasar perbandingan
-yang sangat jelas.
+Benchmark yang Jelas <br> MASE memiliki interpretasi yang sangat kuat.
+Nilai MASE &lt; 1 berarti model Anda lebih baik daripada model naive
+(yang meramalkan nilai periode sebelumnya). Nilai MASE &gt; 1 berarti
+model Anda lebih buruk daripada model naif. Ini memberikan dasar
+perbandingan yang sangat jelas.
 </ol>
 <p>Pada data latih,</p>
 <ul>
 <li>
-Berdasarkan MASE Grafik untuk data latih menunjukkan dua model yang
+Berdasarkan MASE <br> Grafik untuk data latih menunjukkan dua model yang
 berkinerja jauh lebih baik daripada yang lain: SES (MASE: 1.007) dan DES
 (MASE: 1.142). Nilai MASE mereka yang mendekati 1 mengindikasikan bahwa
 performa mereka hampir sama baiknya dengan model naif pada data latih.
 Model-model lain, terutama varian SMA dan DMA dengan periode panjang,
 menunjukkan performa yang jauh lebih buruk (MASE &gt; 2).
 <li>
-Berdasarkan MAPE Hasil ini didukung oleh nilai MAPE. SES (2.96%) dan DES
-(3.30%) memiliki persentase kesalahan absolut rata-rata terendah. Ini
-berarti, saat dilatih, kedua model ini menghasilkan kesalahan yang
-sangat kecil relatif terhadap nilai data asli.
+Berdasarkan MAPE <br> Hasil ini didukung oleh nilai MAPE. SES (2.96%)
+dan DES (3.30%) memiliki persentase kesalahan absolut rata-rata
+terendah. Ini berarti, saat dilatih, kedua model ini menghasilkan
+kesalahan yang sangat kecil relatif terhadap nilai data asli.
 </ul>
 <blockquote>
 <p>Kesimpulan Awal: Model SES dan DES menunjukkan kemampuan terbaik
@@ -2152,17 +2153,17 @@ untuk menyesuaikan diri (fitting) dengan pola pada data latih.</p>
 <p>Pada data uji,</p>
 <ul>
 <li>
-Berdasarkan MASE Peringkat model berubah secara signifikan. Model DES
-(MASE: 1.839) menjadi pemenang yang jelas, diikuti oleh DMA.N.5 (MASE:
-1.974). Yang menarik, SES—model terbaik pada data latih—menunjukkan
-kinerja yang jauh lebih buruk di sini (MASE: 2.917). Ini adalah indikasi
-bahwa model SES mengalami overfitting; ia terlalu “menghafal” data latih
-dan gagal menggeneralisasi polanya ke data baru.
+Berdasarkan MASE <br> Peringkat model berubah secara signifikan. Model
+DES (MASE: 1.839) menjadi pemenang yang jelas, diikuti oleh DMA.N.5
+(MASE: 1.974). Yang menarik, SES—model terbaik pada data
+latih—menunjukkan kinerja yang jauh lebih buruk di sini (MASE: 2.917).
+Ini adalah indikasi bahwa model SES mengalami overfitting; ia terlalu
+“menghafal” data latih dan gagal menggeneralisasi polanya ke data baru.
 <li>
-Berdasarkan MAPE BLagi-lagi, MAPE mengonfirmasi temuan MASE. DES (5.90%)
-dan DMA.N.5 (6.09%) menunjukkan persentase kesalahan terkecil. Ini
-berarti, pada data uji, ramalan dari model DES rata-rata hanya meleset
-sekitar 5.90% dari nilai aktual.
+Berdasarkan MAPE <br> BLagi-lagi, MAPE mengonfirmasi temuan MASE. DES
+(5.90%) dan DMA.N.5 (6.09%) menunjukkan persentase kesalahan terkecil.
+Ini berarti, pada data uji, ramalan dari model DES rata-rata hanya
+meleset sekitar 5.90% dari nilai aktual.
 </ul>
 <blockquote>
 <p>Kesimpulan dan Pemilihan Model Terbaik: Berdasarkan analisis gabungan
